# peisecology

./: .gitignore  README.md
components/peiscam/: Makefile.am  autogen.sh  configure.ac
components/peiscam/src/: Makefile.am  ccvt_c.c  general.c  general.h  jpg_utils.c  jpg_utils.h  peiscam.c  png_utils.c  png_utils.h  template.cc  template.h  utils.c  utils.h
components/peistrans/: CMakeLists.txt  README.md  evaluate.cpp  evaluate.h  generate.sh  main.cpp  regex.cpp  regex.h  util.h  xml_format_readme.h  xml_format_readme.txt
components/peistrans/configs/: XBee_Angen.xml  makeBoolean.xml  setup.txt
components/peistrans/muparserx/: Readme.txt
components/peistrans/muparserx/parser/: Lib_Parser.vcproj  mpDefines.h  mpError.cpp  mpError.h  mpFuncCmplx.cpp  mpFuncCmplx.h  mpFuncCommon.cpp  mpFuncCommon.h  mpFuncMatrix.cpp  mpFuncMatrix.h  mpFuncNonCmplx.cpp  mpFuncNonCmplx.h  mpFuncStr.cpp  mpFuncStr.h  mpFwdDecl.h  mpICallback.cpp  mpICallback.h  mpIOprt.cpp  mpIOprt.h  mpIPackage.cpp  mpIPackage.h  mpIPrecedence.h  mpIToken.cpp  mpIToken.h  mpIValReader.cpp  mpIValReader.h  mpIValue.cpp  mpIValue.h  mpIfThenElse.cpp  mpIfThenElse.h  mpMatrix.h  mpMatrixError.h  mpOprtBinAssign.cpp  mpOprtBinAssign.h  mpOprtBinCommon.cpp  mpOprtBinCommon.h  mpOprtCmplx.cpp  mpOprtCmplx.h  mpOprtIndex.cpp  mpOprtIndex.h  (+38 more)
components/peistrans/muparserx/sample/: example.cpp
components/peistrans/muparserx/value_test/: value_test.sln  value_test.vcproj  value_test.vcxproj  value_test.vcxproj.filters
components/peisxbee/: CMakeLists.txt  README.md  peisxbee.cpp  peisxbee_xbee.cpp
components/peisxbee/libxbee/: CMakeLists.txt  libXBee.h  libXBee_AdcDioFrame.cpp  libXBee_AdcDioFrame.h  libXBee_Defs.cpp  libXBee_Defs.h  libXBee_Error.cpp  libXBee_Error.h  libXBee_RawApiFrame.cpp  libXBee_RawApiFrame.h  libXBee_XBee.cpp  libXBee_XBee.h  libXBee_XBeeSerialConn.cpp  libXBee_XBeeSerialConn.h
components/simulated/: CMakeLists.txt  README  sim_generic.cc
components/simulated/example1/: README  configure.ts  launch.sh  provoke-error.ts  stop.ts
components/simulated/example2/: README  boot.sh  conf1.ts  stop.ts
components/simulated/example2/robot-1/: laser.cmp  navigator.cmp  odometry.cmp
components/simulated/example2/robot-2/: kinnect.cmp  navigator.cmp  odometry.cmp
components/simulated/example2/server/: slam.cmp
components/tuplemonitor/: CMakeLists.txt  README  tuplemonitor.cc
peisinit/G6/: AUTHORS  Doxyfile  INSTALL  Makefile.am  README  TODO  autogen.sh  config.h  configure.ac  peisinit-default
peisinit/G6/docs/: Makefile.am  footer.html  header.html  stylesheet.css
peisinit/G6/share/: Makefile.am  README  example.cmp  post-install.sh
peisinit/G6/share/astrid/: AbsoluteOdometry.cmp  PlayerDrive.cmp  PlayerEncoders.cmp  PlayerSonars.cmp  frontcamera.cmp  omnicamera.cmp  peisaria.cmp  peislaser.cmp  peispantilt.cmp  peisplayer.cmp  rfid.cmp  shutdown.cmp
peisinit/G6/share/knoxen/: etridoorproxy.cmp  etrihomemonitor.cmp  etrilampproxy.cmp  etrisensornetwork.cmp  networkbridge.cmp  peiscsvision.cmp  (+1 more)
peisinit/G6/src/: Makefile.am  peisinit.c  template.c
peiskernel/G6/: .gitignore  COPYING  COPYING.FDL  COPYING.LGPL  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  NOTES  README  TODO  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  doxygen-priv.conf  doxygen.conf  fileInfo.sh  gumstix-sourceme.sh  install-manpages.sh  libtool  update.sh
peiskernel/G6/docs/: Makefile  Makefile.am  Makefile.in  footer.html  header.html  install-manpages.sh  layoutfile.xml  protocoll.txt  stylesheet.css
peiskernel/G6/peiskernel/: Makefile  Makefile.am  Makefile.in  bluetooth.c  bluetooth.h  hashtable.c  hashtable.h  linklayer.c  linklayer.h  p2p.c  p2p.h  peiskernel.c  peiskernel.h  peiskernel_mt.c  peiskernel_mt.h  peiskernel_private.h  peiskernel_tcpip.c  peiskernel_tcpip.h  peisprofiler-bluetooth.gcno  peisprofiler-hashtable.gcno  peisprofiler-linklayer.gcno  peisprofiler-p2p.gcno  peisprofiler-peiskernel.gcno  peisprofiler-peiskernel_tcpip.gcno  peisprofiler-peisprofiler.gcno  peisprofiler-services.gcno  peisprofiler-tuples.gcno  peisprofiler-tuplesAPI.gcno  peisprofiler.c  services.c  services.h  template.c  template.h  tuples.c  tuples.h  tuplesAPI.c  tuples_private.h  udp.c  udp.h
peiskernel/G6/peismaster/: 9masters  9stop.sh  Makefile  Makefile.am  Makefile.in  peismaster.c  peisstatistics.c  template.h
peiskernel/G6/peisproxy/: Makefile.am  Makefile.in  auxiliary.c  auxiliary.h  gprof2dot.py  interface.c  make.sh  peisproxy.h  peisproxy_private.h  peisproxy_sublist.h  profile.sh  proxy.c  proxytest.c  sublist.c
peiskernel/G6/peistest/: Makefile.am  guile.c  guile.h  largepackages.c  makeit  peistest.c  template.c
peiskernel/G6/samples/: 9masters  Makefile  Makefile.am  Makefile.in  marcopolo.c  peisecho.c  receiver.c  sender.c  simpledb.c  stress.c  tuple_generator.c  tuple_generator_mt.c  tuple_reader.c  tuple_reader2.c
peiskernel/G6/tuplescript/: HelloWorld.ts  Makefile  Makefile.am  Makefile.in  TODO  notes  ops_arithmethic.c  ops_containers.c  ops_control.c  ops_io.c  ops_tuples.c  tokenizer.c  tokenizer.h  tokens.def  tuplescript.c  tuplescript.h  values.c  values.h
tupleview/G6/: Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in  tupleview.gladep
tupleview/G6-oldgtk/src/: Makefile.am  aboutDialogue.c  callbacks.c  callbacks.h  connectDialogue.c  ecologyView.c  editValueFileNameDialogue.c  interface.c.bak  interface.h.bak  main.c  preferencesDialogue.c  support.c  tokenizer.c  tokenizer.h  tupleview.h
tupleview/G6/po/: Makefile  Makefile.in
tupleview/G6/share/: Makefile  Makefile.am  Makefile.in  about.ui  connect.ui  editValueFileName.ui  mainwindow.ui  preferences.ui  timeline-example.txt  tupleview.glade
tupleview/G6/src/: Makefile  Makefile.am  Makefile.in  aboutDialogue.c  callbacks.c  callbacks.h  callbacks_js.c  connectDialogue.c  ecologyView.c  editValueFileNameDialogue.c  main.c  preferencesDialogue.c  preferencesDialogue.h  support.c  support.h  tokenizer.c  tupleview.h
(+133 files in other folders)
