dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(tupleview, 0.6.0.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

#pkg_modules="gtk+-2.0 >= 2.0.0 libglade-2.0 gmodule-export-2.0"
pkg_modules="gtk+-2.0 >= 2.24.0 libglade-2.0 gmodule-export-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=tupleview
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_CHECK_LIB(peiskernel,main,,[AC_MSG_ERROR([You need the peiskernel installed on this computer])])
AC_CHECK_LIB(pthread,main,,[AC_MSG_ERROR([We need posix threads for the GUI])])


AC_ARG_WITH([javaspace], AC_HELP_STRING([--with-javaspace],[Enable if you want to
also compile the javaspace version of peiskernel]),
                         [WITH_JAVASPACE=yes],[WITH_JAVASPACE=no])
AM_CONDITIONAL(JAVASPACE, test $WITH_JAVASPACE = yes)

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
share/Makefile
])

